  makefile as "ought to exist".  This algorithm has been modified to prefer
  prerequisites mentioned explicitly in the target being built and only if
  that results in no matching rule, will GNU make consider prerequisites
  mentioned in other targets as "ought to exist".
  Implementation provided by Dmitry Goncharov <dgoncharov@users.sf.net>

* If the MAKEFLAGS variable is modified in a makefile, it will be re-parsed
  immediately rather than after all makefiles have been read.  Note that
  although all options are parsed immediately, some special effects won't
  appear until after all makefiles are read.

* The -I option accepts an argument "-" (e.g., "-I-") which means "reset the
  list of search directories to empty".  Among other things this can be used
  to prevent GNU make from searching in its default list of directories.

* New debug option "print" will show the recipe to be run, even when silent
  mode is set, and new debug option "why" will show why a target is rebuilt
  (which prerequisites caused the target to be considered out of date).
  Implementation provided by David Boyce <David.S.Boyce@gmail.com>

* The existing --trace option is made equivalent to --debug=print,why

* Target-specific variables can now be marked "unexport".

* Exporting / unexporting target-specific variables is handled correctly, so
  that the attribute of the most specific variable setting is used.

* Special targets like .POSIX are detected upon definition, ensuring that any
  change in behavior takes effect immediately, before the next line is parsed.

* When the jobserver is enabled and GNU make decides it is invoking a non-make
  sub-process and closes the jobserver pipes, it will now add a new option to
  the MAKEFLAGS environment variable that disables the jobserver.
  This prevents sub-processes that invoke make from accidentally using other
  open file descriptors as jobserver pipes.  For more information see